fix(Chat): Place Chat pane above Participants pane on mobile web

--- a/css/_participants-pane.scss
+++ b/css/_participants-pane.scss
@@ -56,3 +56,9 @@
         border-radius: 3px;
     }
 }
+
+.mobile-browser.shift-right {
+    .participants_pane {
+        z-index: -1;
+    }
+}
